Fix collapsing remove link in compound filters and update border styles

--- a/src/nationalarchives/components/compound-filters/compound-filters.scss
+++ b/src/nationalarchives/components/compound-filters/compound-filters.scss
@@ -1,3 +1,4 @@
+@use "../../tools/borders";
 @use "../../tools/colour";
 @use "../../tools/spacing";
 @use "../../tools/typography";
@@ -21,7 +22,7 @@
 
     line-height: 1.75;
 
-    border-radius: 1rem;
+    @include borders.rounded-border;
 
     @include typography.font-size(16);
 
@@ -44,12 +45,14 @@
 
     position: relative;
 
+    flex-shrink: 0;
+
     font-size: 0;
     line-height: 0;
 
     text-decoration: none;
 
-    border-radius: 100%;
+    @include borders.rounded-border;
 
     &::before,
     &::after {
